--- a/style.css
+++ b/style.css
@@ -1,69 +1,40 @@
 
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #0e1117;
-    color: white;
+    margin: 0;
+    background-color: #f4f4f4;
 }
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background: #000;
+    color: #fff;
     padding: 1em;
-    background: #13171f;
-}
-.logo {
-    font-size: 1.5em;
-    font-weight: bold;
+    text-align: center;
 }
 nav a {
+    margin: 0 1em;
     color: white;
-    margin: 0 10px;
     text-decoration: none;
 }
 .hero {
-    background: url('hero.jpg') center/cover no-repeat;
     text-align: center;
-    padding: 5em 1em;
+    padding: 2em;
+    background: #333;
+    color: white;
 }
-.hero h1 {
-    font-size: 2.5em;
-}
-.whatsapp-button {
-    display: inline-block;
+.cta-button {
+    background: green;
+    color: white;
     padding: 1em 2em;
-    background: #25D366;
-    color: white;
     text-decoration: none;
-    border-radius: 5px;
-    margin-top: 1em;
+    font-size: 1.2em;
 }
-.info, .products {
-    padding: 2em 1em;
+.ambassador {
     text-align: center;
-}
-.product {
-    background: #1e222b;
-    padding: 1em;
-    margin: 1em;
-    border-radius: 10px;
-    display: inline-block;
-    width: 250px;
-}
-.product img {
-    width: 100%;
-}
-.buy {
-    display: block;
-    margin-top: 1em;
-    background: #25D366;
-    padding: 0.5em;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
+    padding: 2em;
 }
 footer {
+    background: #222;
+    color: white;
     text-align: center;
     padding: 1em;
-    background: #13171f;
 }
